fix content overflow in sub-nav dropdowns

--- a/public/style-2.css
+++ b/public/style-2.css
@@ -242,6 +242,11 @@ label {
   color: black;
 }
 
+.navbar-sub .dropdown.open .dropdown-menu {
+  overflow-y: auto;
+  max-height: calc(100vh - 150px);
+}
+
 .navbar-sub div.info {
   color: black;
   padding: 20px;
